<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_normal"
        android:paddingRight="@dimen/padding_normal"
        tools:context=".locationreminders.ReminderDescriptionActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/reminder_title"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id ="@+id/reminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:gravity="center"
            android:text="@{reminderDataItem.title}"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_medium"
            tools:text="@string/reminder_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/reminder_desc"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/reminderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Description"
            android:text="@{reminderDataItem.description}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            tools:text="Please remind me by take a photo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/reminder_location"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/selectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{reminderDataItem.location}"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_location"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            tools:text="Golden Gate Bridge" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>